force-app/main/default/objects/Opportunity/fields/Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Value__c</fullName>
    <formula>Implementation_Value__c  +  Recurring_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>