force-app/main/default/objects/Opportunity/fields/ERP_system__c.field-meta.xml
<CustomField>
    <fullName>ERP_system__c</fullName>
    <label>ERP system</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>24SevenOffice</fullName>
            </value>
            <value>
                <fullName>Briljant</fullName>
            </value>
            <value>
                <fullName>Fortnox</fullName>
            </value>
            <value>
                <fullName>Luca</fullName>
            </value>
            <value>
                <fullName>Marathon</fullName>
            </value>
            <value>
                <fullName>Nok Nok</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tripletex</fullName>
            </value>
            <value>
                <fullName>Uni Economy</fullName>
            </value>
            <value>
                <fullName>Xledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>