force-app/main/default/objects/Opportunity/fields/Implementation_Value__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Value__c</fullName>
    <label>Implementation Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>