force-app/main/default/objects/Opportunity/fields/Pardot_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Campaign__c</fullName>
    <description>This field is populated from the respective Lead field upon a Lead conversion.</description>
    <label>Pardot Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>