force-app/main/default/objects/Opportunity/fields/Pardot_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comment__c</fullName>
    <description>This field is populated from the respective Lead field upon a Lead conversion.</description>
    <label>Pardot Comment</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>