force-app/main/default/objects/Opportunity/fields/Recurring_Value__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Value__c</fullName>
    <label>Recurring Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>