force-app/main/default/objects/Opportunity/fields/Transfor_to_sales_order__c.field-meta.xml
<CustomField>
    <fullName>Transfor_to_sales_order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check only if product sales are to be transferred to a sales order. The transfer takes place on the last day of the month.</inlineHelpText>
    <label>Transfor to sales order</label>
    <type>Checkbox</type>
</CustomField>