force-app/main/default/objects/Opportunity/recordTypes/Big_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Big_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Opportunity</businessProcess>
    <description>Opportunity with long sales process</description>
    <label>Sales Opportunity</label>
</RecordType>