force-app/main/default/objects/Opportunity/recordTypes/Downsale_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Downsale_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Opportunity</businessProcess>
    <label>Downsale Opportunity</label>
</RecordType>