force-app/main/default/objects/Opportunity/recordTypes/Product_Sale_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Product_Sale_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Small Opportunity</businessProcess>
    <description>N/A</description>
    <label>Product Sale/Opportunity</label>
</RecordType>