force-app/main/default/objects/Opportunity/recordTypes/Reverse_Termination_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Reverse_Termination_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales Opportunity</businessProcess>
    <label>Reverse Termination Opportunity</label>
</RecordType>