force-app/main/default/objects/Opportunity/validationRules/Amount_is_required_on_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_is_required_on_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( StageName , &quot;Closed Won&quot;))
&amp;&amp;
ISBLANK( Implementation_Value__c )
&amp;&amp;
ISBLANK( Recurring_Value__c )
&amp;&amp;
(RecordType.Name = &apos;Big Opportunity&apos;
||
RecordType.Name = &apos;Small Opportunity&apos;)</errorConditionFormula>
    <errorMessage>You need to add Implementation Value and/ or Recurring Value before Opportunity is Closed Won</errorMessage>
</ValidationRule>