force-app/main/default/objects/Opportunity/validationRules/Lead_Source_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( StageName , &quot;Closed Won&quot;))
&amp;&amp;
 ISPICKVAL(LeadSource, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Please add a lead source</errorMessage>
</ValidationRule>