force-app/main/default/objects/Opportunity/validationRules/Oppdragsansvarlig_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Oppdragsansvarlig_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(StageName) 
&amp;&amp;
ISPICKVAL(StageName, &quot;Closed Won&quot;)
&amp;&amp;
ISBLANK(Account.Assignment_Responsible__c)
&amp;&amp;
(Account.BillingCountry != &quot;Sweden&quot; ||
 Account.ShippingCountry != &quot;Sweden&quot;)
&amp;&amp;
ISPICKVAL(Delivery__c, &quot;Accounting&quot;)</errorConditionFormula>
    <errorMessage>Oppdragsansvarlig on Account is mandatory.</errorMessage>
</ValidationRule>