force-app/main/default/objects/Opportunity/validationRules/Validate_ERP_Area_and_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ERP_Area_and_Type</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(StageName, &quot;Closed Won&quot;)
&amp;&amp;
(ISPICKVAL(Delivery__c, &quot;Accounting&quot;) ||
ISPICKVAL(Delivery__c, &quot;System&quot;))
&amp;&amp;
ISPICKVAL(ERP_system__c, &quot;&quot;))
||
(ISPICKVAL(StageName, &quot;Closed Won&quot;)
&amp;&amp;
ISPICKVAL(Delivery__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Delivery and ERP Area is mandatory</errorMessage>
</ValidationRule>