force-app/main/default/objects/Opportunity/listViews/Product_Sale_Opportunity.listView-meta.xml
<ListView>
    <fullName>Product_Sale_Opportunity</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Product_Sale_Opportunity</value>
    </filters>
    <label>Product Sale/Opportunity</label>
</ListView>